--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul class="slider-3" id="js-slider-3">
+        <li>
+          <div class="slide-img">
+            <img src="" alt="">
+          </div>
+        </li>
+        <li>
+          <div class="slide-img">
+            <img src="" alt="">
+          </div>
+        </li>
+        <li>
+          <div class="slide-img">
+            <img src="" alt="">
+          </div>
+        </li>
+        <li>
+          <div class="slide-img">
+            <img src="" alt="">
+          </div>
+        </li>
+      </ul>
+      <div class="dots-3"></div>
     <script src="./script.js"></script>
 </body>
 </html>
