--- a/index.html
+++ b/index.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul class="slider-3" id="js-slider-3">
         <li>
           <div class="slide-img">
-            <img src="" alt="">
+            <img src="https://placehold.jp/1300x700.png" alt="">
           </div>
         </li>
         <li>
           <div class="slide-img">
-            <img src="" alt="">
+            <img src="https://placehold.jp/1300x700.png" alt="">
           </div>
         </li>
         <li>
           <div class="slide-img">
-            <img src="" alt="">
+            <img src="https://placehold.jp/1300x700.png" alt="">
           </div>
         </li>
         <li>
           <div class="slide-img">
-            <img src="" alt="">
+            <img src="https://placehold.jp/1300x700.png" alt="">
           </div>
         </li>
       </ul>
