--- a/index.html
+++ b/index.html
@@ -6,32 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
     <link rel="stylesheet" href="style.css">
-</head>
+    
+</head> 
 <body>
-    <ul class="slider-3" id="js-slider-3">
-        <li>
-          <div class="slide-img">
-            <img src="https://placehold.jp/1300x700.png" alt="">
-          </div>
-        </li>
-        <li>
-          <div class="slide-img">
-            <img src="https://placehold.jp/1300x700.png" alt="">
-          </div>
-        </li>
-        <li>
-          <div class="slide-img">
-            <img src="https://placehold.jp/1300x700.png" alt="">
-          </div>
-        </li>
-        <li>
-          <div class="slide-img">
-            <img src="https://placehold.jp/1300x700.png" alt="">
-          </div>
-        </li>
-      </ul>
-      <div class="dots-3"></div>
-    <script src="./script.js"></script>
+
+  <div class="slider">   
+    <div><img src="https://placehold.jp/1300x700.png"></div>
+    <div><img src="https://placehold.jp/1300x700.png"></div>   
+    <div><img src="https://placehold.jp/1300x700.png"></div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
