--- a/index.html
+++ b/index.html
@@ -6,20 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head> 
-<body>
 
-  <div class="slider">   
-    <div><img src="https://placehold.jp/1300x700.png"></div>
-    <div><img src="https://placehold.jp/1300x700.png"></div>   
-    <div><img src="https://placehold.jp/1300x700.png"></div>
+<body>
+  <div class="container1">
+    <ul class="slider-3" id="js-slider-3">
+      <li>
+        <div class="slide-img">
+          <img src="https://placehold.jp/1500x650.png" alt="rogo1">
+        </div>
+      </li>
+      <li>
+        <div class="slide-img">
+          <img src="https://placehold.jp/1500x650.png" alt="">
+        </div>
+      </li>
+      <li>
+        <div class="slide-img">
+          <img src="https://placehold.jp/1500x650.png" alt="">
+        </div>
+      </li>
+      <li>
+        <div class="slide-img">
+          <img src="https://placehold.jp/1500x650.png" alt="" width="100%" height="700px">
+        </div>
+      </li>
+    </ul>
+    
+    <nav>
+      <ul class="menu">
+        <li><a href=""></a> 食・グルメ</li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer"></a> お土産</li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer"></a> スポット</li>
+      </ul>
+    </nav>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  
+
+<div class="secton1">
+  <img src="https://placehold.jp/1500x650.png" alt="" srcset="" >
+
+</div>
+  
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
   <script src="./script.js"></script>
 </body>
 </html>
