--- a/index.html
+++ b/index.html
@@ -7,52 +7,21 @@
     <title>Tokyo</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="./slick-theme.css">
+    <link rel="stylesheet" href="./slick.css">
 </head> 
 
 <body>
-  <div class="container1">
-    <ul class="slider-3" id="js-slider-3">
-      <li>
-        <div class="slide-img">
-          <img src="https://placehold.jp/1500x650.png" alt="rogo1">
-        </div>
-      </li>
-      <li>
-        <div class="slide-img">
-          <img src="https://placehold.jp/1500x650.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="slide-img">
-          <img src="https://placehold.jp/1500x650.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="slide-img">
-          <img src="https://placehold.jp/1500x650.png" alt="" width="100%" height="700px">
-        </div>
-      </li>
+  <main>
+    <ul class="slider-1" id="js-slider-1">
+      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
+      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
+      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
+      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
     </ul>
-    
-    <nav>
-      <ul class="menu">
-        <li><a href=""></a> 食・グルメ</li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer"></a> お土産</li>
-        <li><a href="http://" target="_blank" rel="noopener noreferrer"></a> スポット</li>
-      </ul>
-    </nav>
-  </div>
+  </main>
   
-
-<div class="secton1">
-  <img src="https://placehold.jp/1500x650.png" alt="" srcset="" >
-
-</div>
-  
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
   <script src="./script.js"></script>
 </body>
