--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./slick-theme.css">
     <link rel="stylesheet" href="./slick.css">
+    <link rel="stylesheet" href="./slick-theme.css">
+    <link rel="stylesheet" href="style.css">
+   
+    
 </head> 
 
 <body>
@@ -21,8 +23,8 @@
     </ul>
   </main>
   
-<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-  <script src="./script.js"></script>
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script defer type="text/javascript" src="./slick.min.js"></script>
+  <script defer src="./script.js"></script>
 </body>
 </html>
