--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
 
 <body>
   <main>
+    <nav>
+      <ul class="menu">
+        <li><a href=""></a>食&グルメ</li>
+        <li><a href=""></a>お土産</li>
+        <li><a href=""></a>スポット</li>
+      </ul>
+    </nav>
     <ul class="slider-1" id="js-slider-1">
       <li><img src="https://placehold.jp/600x400.png" alt=""></li>
       <li><img src="https://placehold.jp/600x400.png" alt=""></li>
       <li><img src="https://placehold.jp/600x400.png" alt=""></li>
       <li><img src="https://placehold.jp/600x400.png" alt=""></li>
     </ul>
+    
   </main>
   
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
