--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
       <li><img src="https://placehold.jp/600x400.png" alt=""></li>
       <li><img src="https://placehold.jp/600x400.png" alt=""></li>
     </ul>
-    
+    <div class="text-wrapper">
+      <img src="https://placehold.jp/600x400.png" alt="">
+      <div class="food&gourmet">
+        <div class="container">
+          <span id="syokugurume">食＆グルメ</span>
+        </div>
+      </div>
+    </div>
   </main>
   
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
