食グルメにimgとh2を追加しました。

--- a/index.html
+++ b/index.html
@@ -30,14 +30,45 @@
     </ul>
     
   </main>
-  <div class="text-wrapper">
-    <img src="https://placehold.jp/600x400.png" alt="">
     <div class="food&gourmet">
       <div class="container">
-        <span id="syokugurume">食＆グルメ</span>
+        <img src="https://placehold.jp/400x300.png" alt="">
+        <h1 id="syokugurume">食＆グルメ</h1>
+      </div>
+      <div class="gohan">
+        <h2 id="breakfast">Breakfast</h2>
+        <img src="https://placehold.jp/300x300.png" alt="">
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+        </p>
+      </div>
+      <div class="gohan">
+        <h2 id="lunch">Lunch</h2>
+        <img src="https://placehold.jp/300x300.png" alt="">
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+        </p>
+      </div>
+      <div class="gohan">
+        <h2 id="afternoontea">Afternoon tea</h2>
+        <img src="https://placehold.jp/300x300.png" alt="">
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+        </p>
+      </div>
+      <div class="gohan">
+        <h2 id="dinner">Dinner</h2>
+        <img src="https://placehold.jp/300x300.png" alt="">
+        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+          <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+        </p>
       </div>
     </div>
-  </div>
+    
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer type="text/javascript" src="./slick.min.js"></script>
   <script defer src="./script.js"></script>
