css追加しました。

--- a/index.html
+++ b/index.html
@@ -45,43 +45,62 @@
         <img src="https://placehold.jp/400x300.png" alt="">
         <h1 id="syokugurume">食＆グルメ</h1>
       </div>
-      
-      <h2 id="breakfast">Breakfast</h2>
+      <ul class="timeline">
+      <li>
+      <dl>
+      <dt id="breakfast">Breakfast</dt>
       <div class="gohan">
         <img src="https://placehold.jp/240x240.png" alt="">
-        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+        <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-        </p>
+        </dd>
       </div>
-      <h2 id="lunch">Lunch</h2>
+      </dl>
+      <span class="boder-line"></span>
+     </li>
+     <li>
+     <dl>
+      <dt id="lunch">Lunch</dt>
       <div class="gohan">
         <img src="https://placehold.jp/240x240.png" alt="">
-        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+        <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-        </p>
+        </dd>
       </div>
-      <h2 id="afternoontea">Afternoon tea</h2>
+     </dl>
+     </li>
+     <li>
+      <dl>
+      <dt id="afternoontea">Afternoon tea</dt>
       <div class="gohan">
         <img src="https://placehold.jp/240x240.png" alt="">
-        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+        <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-        </p>
+        </dd>
       </div>
-      <h2 id="dinner">Dinner</h2>
+     </dl>
+     </li>
+     <li>
+      <dl>
+      <dt id="dinner">Dinner</dt>
       <div class="gohan">
         <img src="https://placehold.jp/240x240.png" alt="">
-        <p>テキストテキストテキストテキストテキストテキストテキストテキスト　
+        <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
           <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-        </p>
+        </dd>
       </div>
+    </dl>
+    </li>
+    </ul> 
     </div>
     
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer type="text/javascript" src="./slick.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script defer src="./script.js"></script>
 </body>
 </html>
